--- a/.gitmodules
+++ b/.gitmodules
@@ -4,7 +4,7 @@
 	branch = release/v7
 [submodule "components/lvgl_esp32_drivers"]
 	path = components/lvgl_esp32_drivers
-	url = https://github.com/lvgl/lvgl_esp32_drivers.git
+	url = https://github.com/Bluemangoo/lvgl_esp32s3_drivers
 [submodule "components/lvgl"]
 	path = components/lvgl
 	url = https://github.com/lvgl/lvgl.git
