--- a/platformio.ini
+++ b/platformio.ini
@@ -12,6 +12,9 @@
 platform = espressif32
 board = esp32-s3-devkitc-1
 framework = arduino
+board_build.arduino.partitions = default_16MB.csv
+board_upload.flash_size = 16MB
+board_build.arduino.memory_type = qio_opi
 monitor_speed = 115200
 lib_deps = bodmer/TFT_eSPI@^2.5.43
 build_flags =
@@ -37,3 +40,4 @@ build_flags =
   -D USE_HSPI_PORT
   -D CONFIG_IDF_TARGET_ESP32S3
   ; -D CONFIG_IDF_TARGET_ESP32S
+  -DBOARD_HAS_PSRAM
